--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <li>Volare</li>
         <li>Giocare a carte con noi umani</li>
     </ul>
-    <img src="Immagini png/foca.jpeg" alt="Divieto foca che gioca a carte" style="width: 35%;">
+    <img src="./Images/foca.jpeg" alt="Divieto foca che gioca a carte" style="width: 35%;">
 
     <br />
     <br />
